css3两个汤圆亲吻动效

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span class="title"><h2>收集H5demo来练习</h2></span>
     <div class="box f1">
         <ul>
-            <li><a href="./html/earth.html">1、地球星空css3特效</a></li>
+            <li><a href="./html/kiss.html">1、css3两个汤圆亲吻动效</a></li>
             <li><a href="">2、</a></li>
             <li><a href="">3、</a></li>
             <li><a href="">4、</a></li>
